--- a/copyables/etc/supervisor/conf.d/supervisord.conf
+++ b/copyables/etc/supervisor/conf.d/supervisord.conf
@@ -6,15 +6,20 @@ command=/usr/bin/Xvfb :1 -screen 0 %(ENV_VNC_SCREEN)s +extension RANDR
 autorestart=true
 priority=100
 
+[program:simpleproxy]
+command=/usr/bin/simpleproxy -L 0.0.0.0:9223 -R 0.0.0.0:9222
+autorestart=true
+priority=200
+
 [program:chrome]
 environment=HOME="/home/chrome",DISPLAY=":1",USER="chrome"
 command=/opt/google/chrome/chrome --window-size=%(ENV_CHROME_WINDOW_SIZE)s %(ENV_CHROME_OPTS)s
 user=chrome
 autorestart=true
-priority=200
+priority=300
 
 [program:x11vnc]
 command=/usr/bin/x11vnc -display :1 %(ENV_X11VNC_AUTH)s -wait 5 -forever -xrandr
 user=chrome
 autorestart=true
-priority=300
+priority=400
